# reactorx200_description

./: CMakeLists.txt  README.md  package.xml
config/: interbotix_texture.gazebo  kinect_ find-object_sett.ini  reactorx200_controller.yaml
launch/: artag_kinect.launch  artag_main.launch  artag_zed2.launch  artag_zed2_no_depth.launch  kinectv1_main.launch  launch_gazebo.launch  main.launch  reactorx200_control.launch  reactorx200_gazebo.launch  rx200_planning_execution.launch  sensor_main.launch  spawn_model_gazebo.launch  spawn_rx200_and_moveit.launch  zed2_artag_main.launch  zed2_main.launch
models/: load_cell_sensor.urdf  pressure_sensor.urdf
models/block/: block.sdf  block.urdf  block_markers.sdf  block_markers.urdf  model.config
models/block/markers/: MarkerData_1_0.xml  MarkerData_2_0.xml  MarkerData_3_0.xml  MarkerData_4_0.xml  MarkerData_5_0.xml
models/block/meshes/: block_markers.dae
models/block_same_id/: block_markers_same_id.sdf  model.config
models/block_same_id/meshes/: block_markers.dae
models/block_v1/: block_markers_v1.sdf  model.config
models/block_v1/meshes/: block_markers.dae
models/load_cell_sensor/: load_cell_sensor.sdf  model.config
models/table/: model.sdf
models/table/meshes/: cafe_table.dae
rviz/: config.rviz
scripts/: moveit_gazebo_test.py  moveit_test.py  pointcloud_object_det.py  py_test.py  ros_controllers_test.py  v2_moveit_test.py  vision_test.py  vision_testv2.py
urdf/: rx200.urdf.xacro  rx200_kinect.urdf.xacro  rx200_kinectv1.urdf.xacro  rx200_zed2.urdf.xacro
